--- a/.github/workflows/generate_index.yml
+++ b/.github/workflows/generate_index.yml
@@ -1,24 +1,26 @@
 name: Generate Meme Index
+
 on:
   push:
     branches:
-      - memes
-  workflow_dispatch:
+      - memes  # Se déclenche quand on ajoute un fichier à la branche "memes"
+  workflow_dispatch:  # Permet de le lancer manuellement depuis l'onglet Actions
 
 jobs:
   update-index:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout repository (Main)
+      - name: Checkout repository (Fetch all branches)
         uses: actions/checkout@v3
         with:
-          fetch-depth: 0  # Assure d'avoir accès à toutes les branches
+          fetch-depth: 0  # Récupère toutes les branches pour éviter les erreurs
 
       - name: Checkout memes branch
         run: |
           git fetch origin memes  # Récupère la branche "memes"
           git checkout memes  # Bascule sur "memes"
-          mkdir -p memes  # Crée le dossier si besoin
+          mkdir -p memes  # S'assure que le dossier existe
+          ls -l  # Debug : Vérifie que les fichiers sont bien là
 
       - name: Generate meme index
         run: |
@@ -37,8 +39,9 @@ jobs:
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
-          git checkout main
-          mv index.json memes/
+          git checkout memes  # Reste bien sur `memes`
+
+          mv index.json memes/  # Déplace `index.json` dans `memes`
           git add memes/index.json
           git commit -m "Mise à jour automatique de index.json" || echo "Aucune modification à valider"
-          git push
+          git push origin memes  # Pousse uniquement sur `memes`
