--- a/.github/workflows/generate_index.yml
+++ b/.github/workflows/generate_index.yml
@@ -22,8 +22,8 @@ jobs:
         run: |
           git fetch origin memes
           git checkout memes
-          mkdir -p memes_folder  # Renaming the folder to avoid confusion
-          mv memes/* memes_folder/ 2>/dev/null || true  # Move existing files if they exist
+          mkdir -p memes_folder  # Rename working directory to avoid conflicts
+          mv memes/* memes_folder/ 2>/dev/null || true  # Move files if they exist
           ls -l memes_folder  # Debug: Check if the files exist
 
       - name: Generate meme index
@@ -55,8 +55,8 @@ jobs:
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
           git checkout main
-          mkdir -p memes
-          mv index.json memes/
-          git add memes/index.json
+          mkdir -p memes_folder
+          mv index.json memes_folder/
+          git add memes_folder/index.json
           git commit -m "Automatic update of index.json" || echo "No changes to commit"
           git push origin main
